# foxhound

./: .gitignore  CLAUDE.md  README.md  analyze.py  config.example.yaml  dedup.py  explore.py  export.py  ingest.py  main.py  merge.py  pseudonymise.py  pyproject.toml  query.py
.claude/: feature-index.md
docs/: faq.mdx  getting-started.mdx  index.mdx
docs/concepts/: architecture.mdx  index.mdx  two-stage-scoring.mdx
docs/guides/: choosing-a-model.mdx  exporting-results.mdx  index.mdx  multi-search-workflow.mdx  privacy-and-pseudonymisation.mdx
docs/reference/: cli-commands.mdx  configuration.mdx  index.mdx
docs/use-cases/: contract-review.mdx  due-diligence.mdx  index.mdx  internal-investigations.mdx  research-synthesis.mdx  subject-access-requests.mdx  workplace-disputes.mdx
parsers/: __init__.py  base_parser.py  diary_parser.py  document_parser.py  email_parser.py  meeting_parser.py
